--- a/pdsVersionamento.html
+++ b/pdsVersionamento.html
@@ -8,7 +8,7 @@
             color: rgb(233, 100, 238);
         }
     </style>
-    <title>Document</title>
+    <title>Aula</title>
 </head>
 <body>
     <h1>Bem vindo!</h1>
@@ -27,4 +27,5 @@
     <h1>Contato</h1>
     <p>+55 (84) 98180-1547</p>
 </body>
+
 </html>
